<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="FragmentLoginBinding">
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.inretailapp.ui.login.AuthViewModel" />
        <variable name="fragment" type="com.inretailapp.ui.login.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.AuthActivity">

        <com.inretailapp.ui.components.WallpaperWidget
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startVerticalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.13" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endVerticalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.87"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middleHorizontalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55"/>

        <LinearLayout
            android:id="@+id/cardForm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/keyline_4"
            app:layout_constraintTop_toTopOf="@id/middleHorizontalGuideline"
            app:layout_constraintBottom_toBottomOf="@id/middleHorizontalGuideline"
            app:layout_constraintStart_toEndOf="@+id/startVerticalGuideline"
            app:layout_constraintEnd_toEndOf="@+id/endVerticalGuideline"
            android:background="@drawable/rounded_rect">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:paddingVertical="@dimen/keyline_5"
                android:paddingHorizontal="@dimen/keyline_5"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/text_input_layout_usuario"
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:startIconDrawable="@drawable/ic_circle_user">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_field_usuario"
                        android:lines="1"
                        android:text=""/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/text_input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/keyline_5"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout_usuario"
                    app:layout_constraintStart_toStartOf="parent"
                    app:passwordToggleEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:startIconDrawable="@drawable/ic_lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_field_password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:text=""/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/linkForgotPasswod"
                    android:layout_marginTop="@dimen/keyline_2"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password"
                    android:textAlignment="textEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MyTheme.Caption"
                    android:text="@string/olvido_password"/>

                <Button
                    android:id="@+id/btnIngresar"
                    app:layout_constraintTop_toBottomOf="@+id/linkForgotPasswod"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/login_iniciar_sesion"
                    android:layout_marginTop="@dimen/keyline_5"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:elevation="@dimen/cardview_default_elevation"
                    android:translationZ="2dp"
                    android:enabled="false"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


        <ImageView
            android:id="@+id/circleAvatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/circle_shape"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cardForm"
            app:layout_constraintTop_toTopOf="@id/cardForm"
            android:contentDescription="@string/ignore" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_bienvenido"
            android:textAlignment="center"
            android:textColor="@color/white_50"
            app:layout_constraintBottom_toTopOf="@+id/circleAvatar"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline5"/>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

